[project]
name = "expersum"
version = "0.0.1"
authors = [
  { name="Jakub Sido", email="JakubSido@gmail.com" },
]
description = "Experiment Sumarizer"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"


dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

